# openpixelcontrol

./: .gitignore  README.md  flush_pixels.py  loader.sh  multiple_run.sh  pyproject.toml  run_tree_cmdline.sh  tree_circle_master.py
com/: rec_socket.py  send_socket.py
layouts/: make_trees_branch.py  make_trees_circles.py
python/: color_utils.py  config.ghosttree.py  mode_manager.py  modes_main.py  opc.py  test_sender.py  test_server.py  twisted_com.py  utils.py
python/modes/: circle_load.py  echo_tree.py  jump.py  lightning.py  line_transport.py  rain.py  seg_rotate_multiple.py  shimmer.py  twinkle.py
python/samples/: raver_plaid.py
src/: gl_server.c
