[tool.poetry]
name = "openpixelcontrol"
version = "0.1.0"
description = ""
authors = ["pankaja <pankaja13.psd@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
twisted = "^23.8.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[virtualenvs]
in-project = true